# MTG-Notion-Importer

./: LICENSE  README.md  Run MTG Notion Importer.command  app.py  decklist.py  notion_api.py  overrides.py  pyproject.toml  requirements.txt  scry.py
mtg_importer/: app.py  cli.py  notion_api.py  util.py
mtg_notion_importer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_add_card_cli.py  test_cn_sort.py  test_names.py  test_normalization_mapping.py  test_procurement.py
